style: fix extension popup rendering width collapse

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,12 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+body.popup-mode {
+  width: 380px;
+  min-height: 400px;
+  overflow: hidden;
+}
+
 /* Scrollbars */
 ::-webkit-scrollbar {
   width: 8px;
